// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`class: WcScope > run > captures metrics for workspace files when instrumented package is installed by root package 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "npm.dependency.instrumented.name": "460da73f7e63aeb72106788158261156d165376633de24e4a6673122ce2470aa",
                  "npm.dependency.instrumented.raw": "460da73f7e63aeb72106788158261156d165376633de24e4a6673122ce2470aa",
                  "npm.dependency.instrumented.version.major": "1",
                  "npm.dependency.instrumented.version.minor": "0",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "92521fc3cbd964bdc9f584a991b89fddaa5754ed1cc96d6d42445338669c1305",
                  "wc.element.attributes.names": [
                    "firstProp",
                    "[redacted17]",
                    "[redacted19]",
                  ],
                  "wc.element.attributes.values": [
                    "[redacted16]",
                    "[redacted18]",
                    "[redacted6]",
                  ],
                  "wc.element.frameworkWrapper": "none",
                  "wc.element.module.specifier": "instrumented-top-level",
                  "wc.element.name": "PackageComp",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 2,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "wc.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "wc",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;

exports[`class: WcScope > run > captures metrics when instrumented package is installed in intermediate package 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "npm.dependency.instrumented.name": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.raw": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.version.major": "1",
                  "npm.dependency.instrumented.version.minor": "0",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "92521fc3cbd964bdc9f584a991b89fddaa5754ed1cc96d6d42445338669c1305",
                  "wc.element.attributes.names": [
                    "firstProp",
                    "[redacted17]",
                    "[redacted19]",
                  ],
                  "wc.element.attributes.values": [
                    "[redacted16]",
                    "[redacted18]",
                    "[redacted6]",
                  ],
                  "wc.element.frameworkWrapper": "none",
                  "wc.element.module.specifier": "instrumented",
                  "wc.element.name": "PackageComp",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 2,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "wc.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "wc",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;

exports[`class: WcScope > run > correctly captures wc element metric data 1`] = `
{
  "errors": [],
  "resourceMetrics": {
    "resource": Resource {
      "_asyncAttributesPromise": undefined,
      "_attributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "_syncAttributes": {
        "analyzed.commit": "commitHash",
        "analyzed.host": "host",
        "analyzed.owner": "owner",
        "analyzed.ownerPath": "host/owner",
        "analyzed.path": "host/owner/repository",
        "analyzed.refs": [],
        "analyzed.repository": "repository",
        "date": "1970-01-01T00:00:02.023Z",
        "environment.name": "test environment",
        "project.id": "projectId",
        "scan.id": "scan id",
        "service.name": "IBM Telemetry",
        "telemetry.emitter.name": "telemetryName",
        "telemetry.emitter.version": "telemetryVersion",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "[omitted for test snapshot]",
      },
      "asyncAttributesPending": false,
    },
    "scopeMetrics": [
      {
        "metrics": [
          {
            "aggregationTemporality": 1,
            "dataPointType": 3,
            "dataPoints": [
              {
                "attributes": {
                  "npm.dependency.instrumented.name": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.raw": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.version.major": "0",
                  "npm.dependency.instrumented.version.minor": "1",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "6ad9613a455798d6d92e5f5f390ab4baa70596bc869ed6b17f5cdd2b28635f06",
                  "wc.element.attributes.names": [
                    "firstProp",
                    "secondProp",
                    "[redacted1]",
                    "[redacted3]",
                    "[redacted5]",
                    "[redacted7]",
                    "[redacted8]",
                    "[redacted10]",
                  ],
                  "wc.element.attributes.values": [
                    "hi",
                    "wow",
                    "[redacted2]",
                    "[redacted4]",
                    "[redacted6]",
                    "[redacted6]",
                    "[redacted9]",
                    "[redacted11]",
                  ],
                  "wc.element.frameworkWrapper": "none",
                  "wc.element.module.specifier": "instrumented",
                  "wc.element.name": "ImaginaryThing",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 1,
              },
              {
                "attributes": {
                  "npm.dependency.instrumented.name": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.raw": "ec46e364d52dab2e207d33617267a84df5838926793c1b0a2974899fe28229f1",
                  "npm.dependency.instrumented.version.major": "0",
                  "npm.dependency.instrumented.version.minor": "1",
                  "npm.dependency.instrumented.version.patch": "0",
                  "npm.dependency.instrumented.version.raw": "6ad9613a455798d6d92e5f5f390ab4baa70596bc869ed6b17f5cdd2b28635f06",
                  "wc.element.attributes.names": [
                    "firstprop",
                    "[redacted12]",
                    "secondprop",
                  ],
                  "wc.element.attributes.values": [
                    "hi",
                    "[redacted13]",
                    "wow",
                  ],
                  "wc.element.frameworkWrapper": "none",
                  "wc.element.module.specifier": "instrumented",
                  "wc.element.name": "accordion",
                },
                "endTime": [
                  0,
                  0,
                ],
                "startTime": [
                  0,
                  0,
                ],
                "value": 1,
              },
            ],
            "descriptor": {
              "advice": {},
              "description": "",
              "name": "wc.element",
              "type": "COUNTER",
              "unit": "",
              "valueType": 0,
            },
            "isMonotonic": true,
          },
        ],
        "scope": {
          "name": "wc",
          "schemaUrl": undefined,
          "version": "",
        },
      },
    ],
  },
}
`;
